Fix font-stretch property

--- a/theme/mischback/_src/style/base/typography.scss
+++ b/theme/mischback/_src/style/base/typography.scss
@@ -20,6 +20,7 @@ body {
   /* TODO: Colorscheme building! */
   color: $color-primary-fg;
   font-family: "Mona Sans", Verdana, "Droid Sans", sans-serif;
+  font-stretch: 100%;
 }
 
 h1,
